LIST OF CHANGES
---------------

 - new modules to execute submission of definitions to LSF
 - captured dependencies between pipeline steps in a directed acyclic graph
 - moved flags, attributes and method related to the overall
   pipeline logic to npg_pipeline::pluggable
 - flattened directory structure for modules implementing functions,
   they all now belong to npg_pipeline::function namespace
 - removed methods representing functions, created mapping of
   functions to modules, methods and options in
   npg_pipeline::pluggable::registry
 - removed ::harold:: component from pipelines'namespace
 - removed post_qc_review pipeline module
 - added npg_pipeline_ prefix to this package's script names if
   was not part of their name
 - removed unused module for fixing Illumina config files
 - removed unused module for LSF job creation for tag deplexing -
   this is now done within p4 stage 1
 - removed unused implementation for function copy_interop_files_to_irods
 - removed unused spatial_filter, fix_broken_files and force_phix_split flags
 - removed a number of unused methods in npg_pipeline::base

release 51.12.0
 - Travis CI build - add iRODS test server
 - run_is_deletable script moved to this package from data_handling,
     custom conversion between run id and run folder path refactored to use
     npg_tracking::illumina::runfolder,
     lims-driver-type argument is added to reset the default samplesheet driver type,
     iRODS build is added to Travis CI configuration to enable all new tests to run,
     Log::Log4perl is used for logging
 - added support for GbS processing
 - travis build tweak for npg_qc

release 51.11.3
 - seq_alignment: fixes for no target alignment and no target alignment+non-consented human split 

release 51.11.2
 - use align_intfile_opt=1 when aligning with star to produce intermediate bam file
 - by default, force bambi i2b to single-threading (general_values parameter available for override)

release 51.11.1