@@ -1,6 +1,7 @@
 LIST OF CHANGES
 ---------------
 
+ - added wr executor
  - new modules to execute submission of definitions to LSF
  - captured dependencies between pipeline steps in a directed acyclic graph
  - moved flags, attributes and method related to the overall
